--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ semver = "1.0.20"
 clap = { version = "4.4.11", features = ["derive"] }
 regex = "1.10.2"
 anyhow = "1.0.75"
-rstest = "0.25.0"
 
 [dev-dependencies]
 tempfile = "3.8.1"
+rstest = "0.25.0"
+assert_cmd = "2.0.17"
