--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ semver = "1.0.20"
 clap = { version = "4.4.11", features = ["derive"] }
 regex = "1.10.2"
 anyhow = "1.0.75"
+insta = "1.43.1"
 
 [dev-dependencies]
 tempfile = "3.8.1"
 rstest = "0.25.0"
 assert_cmd = "2.0.17"
-indoc = "2.0.6"
+insta = "1.43.1"
