--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ clap = { version = "4.4.11", features = ["derive"] }
 regex = "1.10.2"
 anyhow = "1.0.75"
 insta = "1.43.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 
 [dev-dependencies]
 tempfile = "3.8.1"
 rstest = "0.25.0"
-assert_cmd = "2.0.17"
 insta = "1.43.1"
+insta-cmd = "0.6.0"
