--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "1.0.75"
 insta = "1.43.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+toml = "0.8.8"
+serde_yaml = "0.9.27"
 
 [dev-dependencies]
 tempfile = "3.8.1"
