--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ semver = "1.0.20"
 clap = { version = "4.4.11", features = ["derive"] }
 regex = "1.10.2"
 anyhow = "1.0.75"
-insta = "1.43.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 toml = "0.8.8"
@@ -20,3 +19,4 @@ tempfile = "3.8.1"
 rstest = "0.25.0"
 insta = "1.43.1"
 insta-cmd = "0.6.0"
+indoc = "2.0.6"
