ci: Use x86 macOS runner for building x86

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         fetch-depth: 0
     - name: Build
-      run: cargo build --verbose
+      run: cargo build
+    - name: Run tests
+      run: cargo test
     - name: Determine version
       run: cargo run
-    - name: Run tests
-      run: cargo test --verbose
