--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
             target: x86_64-unknown-linux-gnu
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
-          - os: macos-latest
+          - os: macos-latest-large
             target: x86_64-apple-darwin
           - os: macos-latest
             target: aarch64-apple-darwin
