--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,11 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4        
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Build
-      run: cargo build
+
+    - name: Format code
+      run: cargo fmt -- --check
+    - name: Inspect code
+      run: cargo clippy -- -D warnings
     - name: Run tests
       run: cargo test
     - name: Determine version
