--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,13 +39,13 @@ jobs:
 
       - name: Strip binary (Linux/macOS)
         if: matrix.os != 'windows-latest'
-        run: strip target/${{ matrix.target }}/release/${{ env.CLI_NAME }}
+        run: strip target/release/${{ env.CLI_NAME }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.target }}
-          path: target/${{ matrix.target }}/release/${{ env.CLI_NAME }}*
+          name: ${{ env.CLI_NAME }}-${{ matrix.os }}
+          path: target/${{ matrix.target }}/release/${{ env.CLI_NAME }}${{ matrix.os == 'windows-latest' && '.exe' || '' }}
           if-no-files-found: 'error'
 
   release:
@@ -78,3 +78,4 @@ jobs:
           files: artifacts/**/*
           draft: true
           prerelease: ${{ steps.prerelease.outputs.is_prerelease }}
+          token: ${{ secrets.GITHUB_TOKEN }}
