--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
           components: rustfmt, clippy
 
       - name: Install cross (Linux/macOS)
-        if: startsWith(matrix.build.os, 'windows') == 'false'
+        if: !startsWith(matrix.build.os, 'windows')
         run: cargo install cross
 
       - name: Check format
@@ -121,7 +121,7 @@ jobs:
           CARGO_TARGET_DIR: target
 
       - name: Strip binary (Linux/macOS)
-        if: startsWith(matrix.build.os, 'windows') == 'false'
+        if: !startsWith(matrix.build.os, 'windows')
         run: strip target/release/${{ env.CLI_NAME }}
 
       - name: Upload artifact
