--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-git2 = "0.20.2"
+git2 = { version = "0.20.2", default-features = false, features = ["https"] }
 semver = "1.0.20"
 clap = { version = "4.4.11", features = ["derive"] }
 regex = "1.10.2"
