--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,7 @@ jobs:
         if: endsWith(matrix.build.target, 'musl')
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends musl-tools
+          sudo apt-get install -o DPkg::Lock::Timeout=60 -y --no-install-recommends musl-tools
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
