ci: Create full release (no more drafts)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -228,5 +228,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: release-artifacts/*
-          draft: true
+          draft: false
           prerelease: ${{ steps.prerelease.outputs.is_prerelease }}
