--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 toml = "0.9.2"
 serde_yaml = "0.9.27"
+chrono = "0.4.41"
 
 [dev-dependencies]
 tempfile = "3.8.1"
