--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ chrono = "0.4.41"
 [dev-dependencies]
 tempfile = "3.8.1"
 rstest = "0.25.0"
-insta = "1.43.1"
+insta = { version = "1.43.1", features = ["filters"] }
 insta-cmd = "0.6.0"
