ci: Fix github output display

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,8 +26,7 @@ jobs:
     - name: Run tests
       run: cargo test
     - name: Determine version
-      run: cargo run
-    - name: Print GITHUB_OUTPUT Contents
-      run: |
+      run: | 
+        cargo run
         echo "Contents of GITHUB_OUTPUT:"
         cat $GITHUB_OUTPUT
