--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,19 +10,21 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  inspect:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
     - name: Format code
       run: cargo fmt -- --check
     - name: Inspect code
       run: cargo clippy -- -D warnings
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Run tests
       run: cargo test
     - name: Determine version
