--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.140"
 toml = "0.9.2"
 serde_yaml = "0.9.27"
 chrono = "0.4.41"
+stringcase = "0.4.0"
 
 [dev-dependencies]
 tempfile = "3.8.1"
