--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ toml = "0.9.2"
 serde_yaml = "0.9.27"
 chrono = "0.4.41"
 stringcase = "0.4.0"
+conventional_commit_parser = "0.9.4"
 
 [dev-dependencies]
 tempfile = "3.8.1"
