--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,7 +107,7 @@ jobs:
           }
           - {
             name: darwin-x64,
-            os: macos-13,
+            os: macos-15-intel,
             toolchain: stable,
             target: x86_64-apple-darwin,
           }
