--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,6 @@ inflection-rs = "0.2.2"
 [dev-dependencies]
 tempfile = "3.8.1"
 rstest = "0.26.1"
+rstest_reuse = "0.7.0"
 insta = { version = "1.43.1", features = ["filters"] }
 insta-cmd = "0.6.0"
