--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "git-versioner"
-version = "0.0.0"
-authors = ["Felix Kröner"]
+version = "0.1.0"
+authors = ["Felix Kröner <felix.kroener@gmx.de>"]
 edition = "2024"
 readme = "README.md"
-license-file = "LICENSE.txt"
-description = "A tool to manage versions of git repositories"
+license = "MIT"
+description = "A tool to manage versions of git repositories using conventional commits and semantic versioning"
 repository = "https://github.com/Crown0815/git-versioner"
+keywords = ["git", "versioning", "semver", "conventional-commits"]
+categories = ["development-tools", "command-line-utilities"]
 
 [dependencies]
 git2 = { version = "0.20.2", default-features = false, features = ["vendored-libgit2"] }
